<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_TrafficLight" Id="{aaddba8e-ced5-4396-9c8c-6bc2ed214f5f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_TrafficLight
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	state		: INT;
	tRed		: TON;		// Leuchtdauer Rot
	tRedYellow	: TON;	 	// Leuchtdauer RotGelb
	tGreen		: TON;		// Leuchtaduer Gruen
	tYellow		: TON;		// Leuchtdauer Gelb
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE state OF
	E_TL_Phase.INIT:
			LED_Red	:= FALSE;
			LED_Yellow := bBlink;
			LED_Green := FALSE;
	
	E_TL_Phase.RED:
			LED_Red	:= TRUE;
			LED_Yellow := FALSE;
			LED_Green := FALSE;
			IF tRed.Q THEN
				state := E_TL_Phase.YELLOWRED;
			END_IF
			
	E_TL_Phase.YELLOWRED:
			LED_Red	:= TRUE;
			LED_Yellow := TRUE;
			LED_Green := FALSE;
			IF tRedYellow.Q THEN
				state := E_TL_Phase.GREEN;
			END_IF
			
	E_TL_Phase.GREEN:
			LED_Red	:= FALSE;
			LED_Yellow := FALSE;
			LED_Green := TRUE;
			IF tGreen.Q THEN
				state :=E_TL_Phase.YELLOW;
			END_IF
			
	E_TL_Phase.YELLOW:
			LED_Red	:= FALSE;
			LED_Yellow := TRUE;
			LED_Green := FALSE;
			IF tYellow.Q THEN
				state := E_TL_Phase.RED;
			END_IF
ELSE
			LED_Yellow := bBlink;
			LED_Red	:= FALSE;
			LED_Green := FALSE;
END_CASE

IF btnReset THEN
	state := E_TL_Phase.INIT;
	ELSE ;
END_IF

IF btnActive AND (state = 0) THEN
	state := E_TL_Phase.RED;
END_IF


// Timer

tRed(	IN:=(state =  E_TL_Phase.RED),
		PT := T#2S);
		
tRedYellow(	IN:=(state =  E_TL_Phase.YELLOWRED),
		PT := T#2S);
		
tGreen(	IN:=(state =  E_TL_Phase.GREEN),
		PT := T#2S);

tYellow(	IN:=(state =  E_TL_Phase.YELLOW),
		PT := T#2S);
		
		
		
		]]></ST>
    </Implementation>
    <LineIds Name="FB_TrafficLight">
      <LineId Id="744" Count="68" />
      <LineId Id="84" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>